--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,11 +5,24 @@
 
 body{
     background-color: aqua;
-
 }
 
 main{
     min-height: 500px;
-    margin: 10px;
+    margin: auto;
     text-align: center;
 }
+
+alert-success{
+    background-color: green;
+}
+
+form li{
+    background-color: red;
+    list-style-type: none;
+}
+
+.formulaireAjout{
+    margin : 15px;
+}
+
