--- a/templates/layout/base.html.twig
+++ b/templates/layout/base.html.twig
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js" defer></script>
+
+
     {% block stylesheet %} {% endblock %}
     <title> My Bucket List</title>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -18,7 +20,7 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">{% block mainTitle %} {% endblock %}</a>
+            <a class="navbar-brand" href="{{path('app_home')}}">{% block mainTitle %} {% endblock %}</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -34,7 +36,7 @@
                         <a class="nav-link" href="{{path('app_liste')}}">Liste</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{url('app_contact')}}">Contact</a>
+                        <a class="nav-link" href="{{url('app_ajout')}}">Ajouter une idée</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Login</a>
@@ -50,6 +52,8 @@
     </nav>
 </header>
 <main>
+
+
     {% block script %}
 
     {% endblock %}
