--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,15 +14,79 @@ main{
 }
 
 alert-success{
-    background-color: green;
+    background: green;
 }
 
+
 form li{
-    background-color: red;
+    color :rgba(0,0,0,.55);
     list-style-type: none;
 }
 
 .formulaireAjout{
     margin : 15px;
+    border : antiquewhite dotted 3px;
+    background: url(/images/nuage.jpg);
+    min-width: 80%;
+
 }
 
+.formulaireAjout label{
+    color: antiquewhite;
+}
+
+.formulaireAjout--sansBouton{
+    margin: auto;
+    max-width: 50%;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 15px;
+
+}
+
+
+.list a:hover{
+    color : red;
+}
+
+.list{
+    display : inline-flex;
+
+}
+
+.title {
+
+}
+
+.description{
+
+}
+
+.author{
+
+}
+
+.addIdea{
+    color: antiquewhite;
+    background: url(/images/etoile.jpg);
+}
+
+.liensVersDetails{
+    border : black solid 2px;
+    display: grid;
+    grid-row: auto;
+    justify-content: center;
+    width : 30%;
+    color : antiquewhite;
+    margin : 10px;
+    background: aquamarine;
+
+}
+
+.register{
+    margin: auto;
+    max-width: 50%;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 15px;
+}
